fix background when page content overflows

--- a/client/cod-weapons-randomizer/src/components/styles.css
+++ b/client/cod-weapons-randomizer/src/components/styles.css
@@ -9,5 +9,5 @@
 }
 
 .weapon-image {
-  max-height: 260px;
+  max-height: 270px;
 }
