--- a/client/cod-weapons-randomizer/src/index.css
+++ b/client/cod-weapons-randomizer/src/index.css
@@ -13,5 +13,5 @@ code {
 }
 
 body > div {
-  height: 100vh;
+  min-height: 100vh;
 }
